[project]
name = "f1-regulations-agent-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk",
    "langchain",
    "langchain-google-genai",
    "langchain-community",
    "faiss-cpu",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
